--- a/hearthstone-backend/.gitignore
+++ b/hearthstone-backend/.gitignore
@@ -7,10 +7,11 @@
 # Ignore bundler config.
 /.bundle
 
-# Ignore the default SQLite database.
+# Ignore the default SQLite database & JSON file.
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /db/*.sqlite3-*
+/db/*.json
 
 # Ignore all logfiles and tempfiles.
 /log/*
